Fix -Wconversion warnings in os code, primarily linux

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 22
    • Affects Version/s: 22
    • Component/s: hotspot
    • None
    • b11


      Fix Wconversion warnings coming from these files:
      37 /src/hotspot/os/linux/os_linux.cpp
      6 /src/hotspot/os/posix/os_posix.cpp
      5 /src/hotspot/os/linux/attachListener_linux.cpp
      4 /src/hotspot/os/linux/os_perf_linux.cpp
      2 /src/hotspot/os/posix/signals_posix.cpp
      1 /src/hotspot/os/linux/waitBarrier_linux.cpp
      1 /src/hotspot/os/linux/systemMemoryBarrier_linux.cpp
      1 /src/hotspot/os/linux/cgroupSubsystem_linux.cpp

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: