8314114: Fix -Wconversion warnings in os code, primarily linux

Reviewed-by: dholmes, dlong