src/hotspot/os_cpu/linux_x86/os_linux_x86.cpp
@@ -463,7 +463,7 @@ juint os::cpu_microcode_revision() {
   fp = os::fopen("/proc/cpuinfo", "r");
   if (fp) {
     char data[2048] = {0}; // lines should fit in 2K buf
-    size_t len = sizeof(data);
+    int len = (int)sizeof(data);
     while (!feof(fp)) {
       if (fgets(data, len, fp)) {
         if (strstr(data, "microcode") != nullptr) {
